# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ace/ace_engine/ace_config.gni")

config("uicontent_config") {
  visibility = [ ":*" ]
  include_dirs = [ "${ace_root}/interfaces/innerkits/ace" ]
}

ohos_shared_library("ace_uicontent") {
  public_configs = [ ":uicontent_config" ]

  configs = [ "$ace_root:ace_config" ]

  sources = [ "${ace_root}/interfaces/innerkits/ace/ui_content.cpp" ]

  deps = [
    "$ace_root/build:libace",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
  ]

  external_deps = [
    "aafwk_standard:base",
    "aafwk_standard:want",
    "aafwk_standard:runtime",
    "napi:ace_napi",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
  ]

  subsystem_name = "ace"
  part_name = ace_engine_part
}
