# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ace/ace_engine/ace_config.gni")

config("uicontent_config") {
  visibility = [ ":*" ]
  include_dirs = [ "${ace_root}/interfaces/innerkits/ace" ]
}

ohos_shared_library("ace_uicontent") {
  public_configs = [ ":uicontent_config" ]

  configs = [ "$ace_root:ace_config" ]

  sources = [ "${ace_root}/interfaces/innerkits/ace/ui_content.cpp" ]

  include_dirs = [
    "//foundation/appexecfwk/standard/kits/appkit/native/ability_runtime",
    "//foundation/windowmanager/interfaces/innerkits",
  ]

  deps = [
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
    "//foundation/appexecfwk/standard/kits:app_context",
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
  ]

  external_deps = [
    "aafwk_standard:runtime",
    "appexecfwk_standard:appexecfwk_base",
    "napi:ace_napi",
  ]

  subsystem_name = "ace"
  part_name = ace_engine_part
}
