# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/ace/ace_engine/frameworks/core/components/components.gni")

config("rosen_image_config") {
  include_dirs = [ "//libs/android_libs/sdk/shared_library/aosp_arm64/include/external/skia/include/utils" ]
}

build_component("image") {
  sources = [
    "flutter_render_image.cpp",
    "image_animator_component.cpp",
    "image_animator_element.cpp",
    "image_component.cpp",
    "render_image.cpp",
    "render_image_create.cpp",
    "rosen_render_image.cpp",
  ]
  configs = [ ":rosen_image_config" ]
}
